main/default/objects/Maintenance_Ticket__c/Maintenance_Ticket__c.object-meta.xml
<CustomObject>
    <label>Maintenance Ticket</label>
    <nameField>
        <label>Nome Maintenance Ticket</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>