main/default/objects/Maintenance_Ticket__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <referenceTo>Stage__c</referenceTo>
    <relationshipLabel>Maintenance Tickets</relationshipLabel>
    <relationshipName>Maintenance_Tickets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>