main/default/objects/Maintenance_Ticket__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Maintenance Tickets</relationshipLabel>
    <relationshipName>Maintenance_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>